--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.552.0",
     "next-themes": "^0.4.6",
     "preact": "^10.27.2",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
